# tpm

./: .gitignore  README.md  install_dependencies  launch_script  setup  tmp_setup
algorithms/: Makefile  main.c  tpm_dense
algorithms/dense/: cholesky.h  common.h  lu.h  qr.h
algorithms/dense/srclu/: dgetrf.h
algorithms/dense/srcqr/: dgeqrt.h  dparfb.h  dtsmqr.h  dtsqrt.h
algorithms/include/: common.h  populate.h  print.h  tile_address.h  utils.h
algorithms/sparse/: poisson.h  sparselu.h
algorithms/sparse/srcslu/: bdiv.h  bmod.h  empty_block.h  fwd.h  lu0.h
algorithms_with_papi/: Makefile  main.c  tpm_benchmark
algorithms_with_papi/dense/: cholesky.h  lu.h  qr.h
algorithms_with_papi/dense/srclu/: dgetrf_no_pivot.h
algorithms_with_papi/dense/srcqr/: dormqr.h  dpamm.h
algorithms_with_papi/include/: descriptor.h  populate.h  print.h  tile_address.h  utils.h
algorithms_with_papi/sparse/srcslu/: bdiv.h  bmod.h  lu0.h
algorithms_with_papi/stream_copy/: build.sh  main.c  stream  stream_seq.c  stream_tasks.c
power/: Makefile  README.md  idle.c  main.c  tpm_server
power/control/: cholesky.h  lu.h  qr.h  sparselu.h
power/include/: cpufreq.h  rapl.h  server.h  utils.h
results/plot/: plot.py  plot_bars.py
trace/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tpm_trace.c  tpm_trace.h
trace/include/: callbacks.h  client.h  common.h  cvector.h  log.h  tpm_task.h  trace.h  upstream.h
trace_no_ompt/: CMakeLists.txt  tpm_trace_no_ompt.c  tpm_trace_no_ompt.h
trace_no_ompt/include/: bsearch.h  common.h  log.h  tpm_task.h
